--- a/animations/index.html
+++ b/animations/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="box"></div>
+    <div class="ball"></div>
+    <div class="base"></div>
   </body>
 </html>
