--- a/animations/index.html
+++ b/animations/index.html
@@ -15,6 +15,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="javascript.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
